plugins/cloud/ripples: Clean URL construction future deprecation.